# advent-of-code

./: .gitattributes  .gitignore  .swift-format  Cargo.toml  Makefile  README.md
2023/: Makefile
2023/day-1/: solution_part1.py  solution_part2.py
2023/day-1/tests/: test_part1.py  test_part2.py
2023/day-2/: part1.py  part2.py
2023/day-2/tests/: test_part1.py  test_part2.py
2023/day-3/src/: main.rs
2023/day-4/: part1.py  part2.py
2023/day-4/tests/: test_part1.py  test_part2.py
2023/day-5/: answers.txt  part1.py  part2.py
2023/day-5/tests/: test_part1.py  test_part2.py
2023/day-6/: part1.py  part2.py
2023/day-6/tests/: test_part1.py  test_part2.py
2023/day-7/: Makefile  Package.swift  answers.txt
2023/day-8/: Package.swift  answers.txt  route.txt
2023/day-8/Sources/: main.swift
2023/day-8/Tests/: part1.swift  part2.swift
2023/day-9/: answers.txt  part1.py  part2.py
2023/day-9/tests/: test_part1.py  test_part2.py
2023/inputs/day1/: input.txt
2023/inputs/day10/: input.txt  (+2 more)
2023/swift/: Makefile  Package.resolved  Package.swift
2023/swift-aoc/: Package.swift
2024/rust/: Cargo.toml
2024/rust/benches/: solutions.rs
2024/rust/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  utils.rs
2024/rust/src/shared/: answers.rs  direction.rs  grid_directions.rs  grid_index.rs  grid_map.rs  inputs.rs  logging.rs  map.rs  mod.rs
(+190 files in other folders)
