[package]
name = "aoc24"
version = "0.4.0"
edition = "2021"

[features]
slow_tests = []

[dependencies]
anyhow = "1.0.93"
cached = "0.54.0"
clap = { version = "4.5.21", features = ["derive"] }
itertools = "0.13.0"
log = "0.4.22"
nalgebra = "0.33.2"
regex = "1.11.1"
stderrlog = "0.6.0"
strum = { version = "0.26.3", features = ["derive"] }
